--- a/quiz/src/app/header/header.component.html
+++ b/quiz/src/app/header/header.component.html
@@ -1,11 +1,1 @@
-<<<<<<< Updated upstream
-<nav><a href="">
-
-</a>
-
-</nav>
-=======
-<p>
-  header works!
-</p>
->>>>>>> Stashed changes
+<p>header works!</p>
