--- a/quiz/src/app/app.component.html
+++ b/quiz/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-
+<p>Hej</p>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
