Fixade svar och fråga på hemsidan med knappar.

--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -1,1 +1,7 @@
-<p>quiz works</p>
+
+<h3>Question 1</h3>
+<p>{{firstQuestion}}</p>
+
+<button id="True" value="True" (click)="playerAnswer = 'True'; clickTrueFalse(playerAnswer)">True</button>
+<button id="False" value="False" (click)="playerAnswer = 'False'; clickTrueFalse(playerAnswer)">False</button>
+
