intro page looks nice :)

--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -1,6 +1,9 @@
+<figure>
+  <img src="/assets/logo.png" alt="logo">
+</figure>
 <div class="jumbotron">
   <p class="lead">
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Enter...</a>
+    <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Enter...</a>
   </p>
 </div>
