--- a/quiz/src/app/intro/intro.component.css
+++ b/quiz/src/app/intro/intro.component.css
@@ -1,16 +1,13 @@
-img{
-  display: block;
-  margin: 0 auto;
-  width: 20%;
-  height: 20%;
-}
-
 .container  {
 }
-
+.btn{
+  display: block;
+  padding: 20px;
+  margin: 20px;
+}
 .jumbotron{
-  background-color: white;
-  opacity: 0.5;
+  background-color: black;
+  opacity: 0.7;
   width: 50%;
   float: none;
   margin: 0 auto;
