background img looks better now

--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works</p>
+<div class="jumbotron">
+  <p class="lead">
+    <a class="btn btn-primary btn-lg" routerLink="/about" role="button">About</a>
+    <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Enter...</a>
+  </p>
+</div>
