--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
 </figure>
 <div class="jumbotron">
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    <a class="btn btn-primary btn-lg" routerLink="/about" role="button">About</a>
     <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Enter...</a>
   </p>
 </div>
