Tog bort alert på frågorna

--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -3,12 +3,13 @@
 
 <div *ngIf="showGame">
 
-<h3>Question {{htmlRound}}</h3>
+<h3>Question {{htmlRound}} - {{inputCorrect}}</h3>
 <p [innerHTML]="currentQuestion"></p>
 
 <button id="True" value="True" (click)="buttonAnswer = 'True'; clickTrueFalse(buttonAnswer)">True</button>
 <button id="False" value="False" (click)="buttonAnswer = 'False'; clickTrueFalse(buttonAnswer)">False</button>
-</div>
+
+
 
 
 <div *ngIf="showResult">
