--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,6 +1,13 @@
-<div class="jumbotron">
+<div class="jumbotron jumbotron-fluid">
+<div class="container-fluid test">
   <p class="lead">
-    <a class="btn btn-primary btn-lg" routerLink="/about" role="button">About</a>
-    <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Enter...</a>
+    This is a quiz game made as a school project at Malmö University.   
   </p>
+  <p class="lead">
+    You can choose to either play solo, or multiplayer. Choose among 5 different categories and challange yourself
+    with different difficulty.
+  </p>
+    <a class="btn btn-warning btn-lg" routerLink="/intro" role="button">The team behind it.</a>
+
+</div>
 </div>
