--- a/quiz/src/app/intro/intro.component.html
+++ b/quiz/src/app/intro/intro.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <p class="lead">
-    <a class="btn btn-success btn-lg" routerLink="/quiz" role="button">Play Quiz</a>
-    <a class="btn btn-warning btn-lg" routerLink="/intro" role="button">Multiplayer</a>
-    <a class="btn btn-primary btn-lg" routerLink="/score-board" role="button">Score board</a>
+    <a class="btn btn-success btn-lg" routerLink="/quizsetup" role="button">Play Quiz</a>
+    <a class="btn btn-warning btn-lg" routerLink="/quizsetup" role="button">Multiplayer</a>
+    <a class="btn btn-primary btn-lg" routerLink="/scoreboard" role="button">Scoreboard</a>
   </p>
 </div>
