Fixade quiz-setup
Går inte att spela 2 player än

--- a/quiz/src/app/intro/intro.component.html
+++ b/quiz/src/app/intro/intro.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <p class="lead">
-    <a class="btn btn-success btn-lg" routerLink="/quizsetup" role="button">Play Quiz</a>
-    <a class="btn btn-warning btn-lg" routerLink="/quizsetup" role="button">Multiplayer</a>
+    <a class="btn btn-success btn-lg" routerLink="/quizsetup/1" role="button">Play Quiz</a>
+    <a class="btn btn-warning btn-lg" routerLink="/quizsetup/2" role="button">Multiplayer</a>
     <a class="btn btn-primary btn-lg" routerLink="/scoreboard" role="button">Scoreboard</a>
   </p>
 </div>
