--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -1,1 +1,20 @@
-<p>score-board works</p>
+<div class="container">
+
+  <div class="row col-lg-8 offset-lg-2">
+
+    <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Score</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let s of scores">
+        <td>{{s.name}}</td>
+        <td>{{s.score}}</td>
+      </tr>
+    </tbody>
+  </table>
+  </div>
+</div>
