--- a/quiz/src/styles.css
+++ b/quiz/src/styles.css
@@ -8,4 +8,7 @@ body{
   background-position: center;  /* Internet Explorer 7/8 */
   background-repeat: no-repeat;
 }
-
+nav{
+  height: 30px;
+  background-color: #1a001a;
+}
