--- a/quiz/src/app/footer/footer.component.html
+++ b/quiz/src/app/footer/footer.component.html
@@ -1,3 +1,5 @@
-<footer>
-<p>Quiz</p>
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">Quiz</span>
+  </div>
 </footer>
