--- a/quiz/src/app/footer/footer.component.css
+++ b/quiz/src/app/footer/footer.component.css
@@ -1,9 +1,20 @@
 p{
   text-align: center;
-  line-height: 50px;
+  line-height: 2em;
   color: #fff;
 }
-footer{
-  height: 50px;
-  background-color: #1a001a;
+.footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+.text-muted{
+  color: #6c757d!important;
 }
