--- a/quiz/src/app/quiz-setup/quiz-setup.component.css
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.css
@@ -1,10 +1,11 @@
 h3{
-    color: white;
-    text-align: center
+  color: white;
+  text-align: center
 }
 .btn{
   display: block;
-  margin: 8%;
+  margin: 20px;
+  margin-left: 7%;
   border-radius: 24px;
 }
 
@@ -33,5 +34,6 @@ button {
   width: 80%;
   float: none;
   margin: 0 auto;
+  margin-top: 70px;
+  padding: 40px !important; 
 }
-
