--- a/quiz/src/app/quiz/quiz.component.css
+++ b/quiz/src/app/quiz/quiz.component.css
@@ -1,5 +1,5 @@
 .jumbotron{
-  background-color: white;
+  background-color: black;
   opacity: 0.7;
   width: 80%;
   float: none;
@@ -12,37 +12,24 @@ p{
     color: white;
 }
 
-HTML  CSS   Result
-Edit on 
-/**************************
-  DEFAULT BOOTSTRAP STYLES
-**************************/
-
-
-.btn-primary {
+/* GRÖN KNAPP */
+.btn-success:hover,
+.btn-success:focus,
+.btn-success:active,
+.btn-success.active,
+.open .dropdown-toggle.btn-success {
   color: #fff;
-  background-color: #428bca;
-  border-color: #357ebd;
+  background-color: darkgreen;
+  border-color: darkgreen;
 }
-
-.btn-primary:hover,
-.btn-primary:focus,
-.btn-primary:active,
-.btn-primary.active,
-.open .dropdown-toggle.btn-primary {
-  color: #fff;
-  background-color: #3276b1;
-  border-color: #285e8e;
-}
-
 /***********************
   RAISED BUTTONS
 ************************/
-.btn-primary.raised {
-    box-shadow: 0 8px 0 0 #007299;
+.btn-success.raised {
+    box-shadow: 0 8px 0 0 darkgreen;
 }
-.btn-primary.raised:active, .btn-primary.raised.active {
-    background: #33a6cc;
+.btn-success.raised:active, .btn-success.raised.active {
+    background: green;
     box-shadow: none;
     margin-bottom: -3px;
     margin-top: 3px;
@@ -51,7 +38,6 @@ Edit on
 /***********************
   CUSTON BTN VALUES
 ************************/
-
 .btn {
     padding: 14px 24px;
     border: 0 none;
@@ -63,14 +49,57 @@ Edit on
     outline: 0 none;
 }
 
-.btn-primary {
-    background: #0099cc;
+.btn-success {
+    background: green;
     color: #ffffff;
 }
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
-    background: #33a6cc;
+.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .open > .dropdown-toggle.btn-success {
+    background: green;
 }
-.btn-primary:active, .btn-primary.active {
-    background: #007299;
+.btn-success:active, .btn-success.active {
+    background: darkgreen;
+    box-shadow: none;
+}
+
+/*RÖD KNAPP*/
+.btn-danger:hover,
+.btn-danger:focus,
+.btn-danger:active,
+.btn-danger.active,
+.open .dropdown-toggle.btn-danger {
+  color: #fff;
+  background-color: darkred;
+  border-color: darkred;
+}
+
+/***********************
+  RAISED BUTTONS
+************************/
+.btn-danger.raised {
+    box-shadow: 0 8px 0 0 darkred;
+}
+.btn-danger.raised:active, .btn-danger.raised.active {
+    background: red;
+    box-shadow: none;
+    margin-bottom: -3px;
+    margin-top: 3px;
+}
+
+/***********************
+  CUSTON BTN VALUES
+************************/
+.btn:focus, .btn:active:focus, .btn.active:focus {
+    outline: 0 none;
+}
+
+.btn-danger {
+    background: red;
+    color: #ffffff;
+}
+.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .open > .dropdown-toggle.btn-danger {
+    background: red;
+}
+.btn-danger:active, .btn-danger.active {
+    background: darkred;
     box-shadow: none;
 }
