--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -8,8 +8,8 @@
 <button (click)="category='21'; setCategory(category)" class="btn btn-orange btn-lg btn-block round">Sports</button>
 <button (click)="category='23'; setCategory(category)" class="btn btn-yellow btn-lg btn-block round">History</button>
 <button (click)="category='27'; setCategory(category)" class="btn btn-success btn-lg btn-block round">Animals</button>
-<button (click)="category='18'; setCategory(category)" class="btn btn-white btn-lg btn-block round">Science-Computers</button>
-<button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block round">Cartoon & Animations</button>
+<button (click)="category='18'; setCategory(category)" class="btn btn-white btn-lg btn-block round">Sci - Computers</button>
+<button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block round">Cartoons</button>
 
 </div>
 
@@ -21,7 +21,7 @@
 
 <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
 <h3>Välj svårighetsgrad:</h3>
-<button (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block round">HARD</button>
-<button (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-warning btn-lg btn-block round">MEDIUM</button>
-<button (click)="difficulty='easy'; setDifficulty(difficulty)" class="btn btn-success btn-lg btn-block round">EASY</button>
+<button (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block round">Difficult</button>
+<button (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-warning btn-lg btn-block round">Medium</button>
+<button (click)="difficulty='easy'; setDifficulty(difficulty)" class="btn btn-success btn-lg btn-block round">Easy</button>
 </div>
