--- a/quiz/src/app/quiz-setup/quiz-setup.component.css
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.css
@@ -1,3 +1,5 @@
+
+
 h3{
   color: white;
   text-align: center
@@ -7,7 +9,9 @@ h3{
   margin: 20px;
   margin-left: 7%;
   border-radius: 24px;
+  font-weight: bold;
 }
+
 
 button {
   width: 85%;
@@ -26,6 +30,9 @@ button {
 }
 .btn-white{
     background-color: white;
+}
+.btn-success{
+    color: black;
 }
 
 .jumbotron{
