--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -11,8 +11,8 @@
     </thead>
     <tbody>
       <tr *ngFor="let s of scores">
-        <td>{{s.name}}</td>
-        <td>{{s.score}}</td>
+        <td>{{s.playerName}}</td>
+        <td>{{s.playerScore}}</td>
       </tr>
     </tbody>
   </table>
