något har hänt!!!!!

--- a/quiz/src/app/about/about.component.css
+++ b/quiz/src/app/about/about.component.css
@@ -5,10 +5,8 @@
 
 
 .jumbotron{
-  background-color: white;
-  opacity: 0.5;
+  background-color: rgba(255, 255, 255, 0.4);
   width: 80%;
   float: none;
   margin: 0 auto;
 }
-
