--- a/quiz/src/app/intro/intro.component.css
+++ b/quiz/src/app/intro/intro.component.css
@@ -4,8 +4,7 @@
   margin: 25px;
 }
 .jumbotron{
-  background-color: black;
-  opacity: 0.7;
+  background-color: rgba(0, 0, 0, 0.4);
   width: 80%;
   float: none;
   margin: 0 auto;
