--- a/quiz/src/app/quiz-setup/quiz-setup.component.css
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.css
@@ -36,8 +36,7 @@ button {
 }
 
 .jumbotron{
-  background-color: black;
-  opacity: 0.7;
+  background-color: rgba(0, 0, 0, 0.4);
   width: 80%;
   float: none;
   margin: 0 auto;
