Added jumbotron to result

--- a/quiz/src/app/quiz/quiz.component.css
+++ b/quiz/src/app/quiz/quiz.component.css
@@ -37,7 +37,6 @@ p{
 .btn-primary:active,
 .btn-primary.active,
 .open .dropdown-toggle.btn-primary {
->>>>>>> Stashed changes
   color: #fff;
   background-color: darkgreen;
   border-color: darkgreen;
@@ -64,6 +63,7 @@ p{
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: uppercase;
+    font-weight: bold;
 }
 .btn:focus, .btn:active:focus, .btn.active:focus {
     outline: 0 none;
