--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -14,8 +14,8 @@
 </div>
 
 <!-- SKRIV RESULT HTML HÄR -->
-<div *ngIf="showResult">
-  <h2>Du fick {{ playerScore }} poäng!</h2>
+<div *ngIf="showResult" class="jumbotron">
+  <h2>You got {{ playerScore }} points!</h2>
 
   <h3>Post on scoreboard?</h3>
 
