--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -2,8 +2,10 @@
   <img src="/assets/logo.png" alt="logo">
 </figure>
 <div class="jumbotron">
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" routerLink="/about" role="button">About</a>
-    <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Enter...</a>
-  </p>
+  <div class="row">
+
+    <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/about" role="button">About</a>
+    <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/intro" role="button">Start Game</a>
+
+  </div>
 </div>
