--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,13 +1,14 @@
 <div class="jumbotron jumbotron-fluid">
 <div class="container-fluid test">
   <p class="lead">
-    This is a quiz game made as a school project at Malmö University.   
+    This is a quiz game made as a school project at Malmö University.
   </p>
   <p class="lead">
     You can choose to either play solo, or multiplayer. Choose among 5 different categories and challange yourself
     with different difficulty.
   </p>
-    <a class="btn btn-warning btn-lg" routerLink="/intro" role="button">The team behind it.</a>
-
-</div>
+  <img src="/assets/elephant.png" alt="Alexander" class="avatar">
+  <img src="/assets/panda.png" alt="Hareer" class="avatar">
+  <img src="/assets/redPandaa.png" alt="My" class="avatar">
+  <img src="/assets/uggla.png" alt="Viktor" class="avatar">
 </div>
