--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -4,6 +4,6 @@
 <div class="jumbotron">
   <p class="lead">
     <a class="btn btn-primary btn-lg" routerLink="/about" role="button">About</a>
-    <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Enter...</a>
+    <a class="btn btn-primary btn-lg" routerLink="/intro" role="button">Play</a>
   </p>
 </div>
