--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container jumbotron">
 
   <div class="row col-lg-8 offset-lg-2">
-
     <table class="table">
     <thead>
+      <h3>Scoreboard:</h3>
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Score</th>
