--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid col-lg-6">
 <div class="container-fluid test">
   <p class="lead">
     This is a quiz game made as a school project at Malmö University.
