--- a/quiz/src/app/intro/intro.component.html
+++ b/quiz/src/app/intro/intro.component.html
@@ -1,4 +1,4 @@
-<div class="jumbotron">
+<div class="jumbotron col-lg-6">
   <p class="lead">
     <a class="btn btn-success btn-lg" routerLink="/quizsetup/1" role="button">One player</a>
     <a class="btn btn-warning btn-lg" routerLink="/quizsetup/2" role="button">Multiplayer</a>
