--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -1,4 +1,4 @@
-<div class="container jumbotron">
+<div class="container jumbotron col-lg-6">
 
   <div class="row col-lg-8 offset-lg-2">
     <table class="table">
