--- a/quiz/src/app/header/header.component.css
+++ b/quiz/src/app/header/header.component.css
@@ -1,8 +1,11 @@
 .nav{
   height: 35px;
-  background-color: #f5f5f5;
+  background-color: #333;
 }
 a {
   padding: 35px;
   margin-top: -30px;
+  color: white;
+  font-weight: bold;
+
 }
