--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -4,7 +4,7 @@
 <div class="jumbotron col-lg-6">
   <div class="row">
 
-    <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/about" role="button">About</a>
+    <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/scoreboard" role="button">Scoreboard</a>
     <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/intro" role="button">Start Game</a>
 
   </div>
