--- a/quiz/src/app/quiz/quiz.component.css
+++ b/quiz/src/app/quiz/quiz.component.css
@@ -1,5 +1,3 @@
-
-
 .jumbotron{
   background-color: rgba(0, 0, 0, 0.4);
   width: 80%;
@@ -10,8 +8,11 @@
 h3 {
     color: white;
 }
+h2{
+  color: white;
+}
 p{
-    color: white;
+  color: white;
 }
 
 /* GRÖN KNAPP */
