--- a/quiz/src/app/quiz-setup/quiz-setup.component.css
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.css
@@ -14,24 +14,6 @@ h3{
 button {
   width: 85%;
 }
-.btn-yellow {
-    background-color: yellow;
-}
-.btn-orange {
-    background-color: orange;
-}
-.btn-pink{
-    background-color: #e83e8c;
-}
-.btn-cyan{
-    background-color: #17a2b8;
-}
-.btn-white{
-    background-color: white;
-}
-.btn-success{
-    color: black;
-}
 
 .jumbotron{
   background-color: rgba(0, 0, 0, 0.4);
@@ -40,4 +22,50 @@ button {
   margin: 0 auto;
   margin-top: 70px;
   padding: 40px !important;
+}
+
+
+.btn-orange {
+    background-color: #F47219;
+    color: white;
+    display: block;
+}
+.btn-orange:hover{
+  background-color:#FF9248;
+}
+
+.btn-green{
+    background-color: #12AC59;
+    color: white;
+    display: block;
+}
+.btn-green:hover{
+  background-color: #33B46F;
+}
+
+.btn-blue{
+    background-color: #176D9B;
+    color: white;
+    display: block;
+}
+.btn-blue:hover{
+  background-color:#347CA2;
+}
+
+.btn-purple{
+    background-color: #5E1DA5;
+    color: white;
+    display: block;
+}
+.btn-purple:hover{
+  background-color:#713BAC;
+}
+
+.btn-red{
+    background-color: #DA1752;
+    color: white;
+    display: block;
+}
+.btn-red:hover{
+  background-color:#E44172;
 }
