--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -1,27 +1,24 @@
 
 
-<div *ngIf="showCategory" class="jumbotron">
+<div *ngIf="showCategory" class="jumbotron col-lg-6">
 
 <!-- SKRIV KATEGORI HTML HÄR -->
 <h3>Välj kategori: </h3>
-<button (click)="category='9'; setCategory(category)" class="btn btn-cyan btn-lg btn-block round">General</button>
-<button (click)="category='21'; setCategory(category)" class="btn btn-orange btn-lg btn-block round">Sports</button>
-<button (click)="category='23'; setCategory(category)" class="btn btn-yellow btn-lg btn-block round">History</button>
-<button (click)="category='27'; setCategory(category)" class="btn btn-success btn-lg btn-block round">Animals</button>
-<button (click)="category='18'; setCategory(category)" class="btn btn-white btn-lg btn-block round">Sci - Computers</button>
-<button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block round">Cartoons</button>
+<button (click)="category='9'; setCategory(category)" class="btn btn-blue btn-lg btn-block">General</button>
+<button (click)="category='21'; setCategory(category)" class="btn btn-orange btn-lg btn-block">Sports</button>
+<button (click)="category='23'; setCategory(category)" class="btn btn-purple btn-lg btn-block">History</button>
+<button (click)="category='27'; setCategory(category)" class="btn btn-green btn-lg btn-block">Animals</button>
+<button (click)="category='18'; setCategory(category)" class="btn btn-red btn-lg btn-block">Sci - Computers</button>
+<button (click)="category='32'; setCategory(category)" class="btn btn-pink btn-lg btn-block">Cartoons</button>
 
 </div>
 
 
-
-
-
-<div *ngIf="showDifficulty" class="jumbotron">
+<div *ngIf="showDifficulty" class="jumbotron col-lg-6">
 
 <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
 <h3>Välj svårighetsgrad:</h3>
-<button (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block round">Difficult</button>
+<button (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block">Difficult</button>
 <button (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-warning btn-lg btn-block round">Medium</button>
 <button (click)="difficulty='easy'; setDifficulty(difficulty)" class="btn btn-success btn-lg btn-block round">Easy</button>
 </div>
