Tar bort hard på vissa ämnen

--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -18,7 +18,7 @@
 
 <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
 <h3>Välj svårighetsgrad:</h3>
-<button (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block">Difficult</button>
+<button *ngIf="showHardButton" (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block">Difficult</button>
 <button (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-warning btn-lg btn-block round">Medium</button>
 <button (click)="difficulty='easy'; setDifficulty(difficulty)" class="btn btn-success btn-lg btn-block round">Easy</button>
 </div>
