--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -1,6 +1,6 @@
 
 
-<div *ngIf="showCategory" class="jumbotron col-lg-6">
+<div *ngIf="showCategory" class="jumbotron col-lg-6 animated fadeIn">
 
 <!-- SKRIV KATEGORI HTML HÄR -->
 <h3>Välj kategori: </h3>
@@ -14,7 +14,7 @@
 </div>
 
 
-<div *ngIf="showDifficulty" class="jumbotron col-lg-6">
+<div *ngIf="showDifficulty" class="jumbotron col-lg-6 animated fadeIn">
 
 <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
 <h3>Välj svårighetsgrad:</h3>
