--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -1,7 +1,7 @@
 
 
 <!-- SKRIV FRÅGE-HTML HÄR -->
-<div *ngIf="showGame" class="jumbotron col-lg-6">
+<div *ngIf="showGame" class="jumbotron col-lg-6 animated fadeInLeft">
   <div class="container">
     <div class="row">
   <div *ngIf="showP1P2">
