--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -7,8 +7,10 @@
     You can choose to either play solo, or multiplayer. Choose among 5 different categories and challange yourself
     with different difficulty.
   </p>
+  <div id="CenterPic">
   <img src="/assets/elephant.png" alt="Alexander" class="avatar">
   <img src="/assets/panda.png" alt="Hareer" class="avatar">
   <img src="/assets/redPandaa.png" alt="My" class="avatar">
   <img src="/assets/uggla.png" alt="Viktor" class="avatar">
+  </div>
 </div>
