--- a/quiz/src/app/about/about.component.css
+++ b/quiz/src/app/about/about.component.css
@@ -12,14 +12,16 @@
   margin-top: 90px;
 }
 .avatar {
-    vertical-align: middle;
-    width: 20%;
-    height: 20%;
-    border-radius: 50%;
+  vertical-align: middle;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin: 12px;
 }
-.avatar[_ngcontent-c3]{
-  width: 150px;
-  height: 150px;
+#CenterPic{
+  display: table;
+  margin: 0 auto;
+  justify-content: space-between;
 }
 p{
   color: #fff;
