Changed button color

--- a/quiz/src/app/landing/landing.component.html
+++ b/quiz/src/app/landing/landing.component.html
@@ -3,7 +3,7 @@
 </figure>
 <div class="jumbotron col-lg-6">
   <div class="row">
-    <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/intro" role="button">Start Game</a>
-    <a class="btn btn-primary btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/scoreboard" role="button">Scoreboard</a>
+    <a class="btn btn-orange btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/intro" role="button">Start Game</a>
+    <a class="btn btn-purple btn-lg col-10 col-sm-4 col-md-4 col-lg-4 offset-2 qBtn" routerLink="/scoreboard" role="button">Scoreboard</a>
   </div>
 </div>
