--- a/quiz/src/app/landing/landing.component.css
+++ b/quiz/src/app/landing/landing.component.css
@@ -8,7 +8,14 @@
   float: 0;
   margin: 0 auto;
 }
-
+.btn-orange{
+  background-color: #DE652E;
+  color: white;
+}
+.btn-purple{
+  background-color: #8A1D95;
+  color: white;
+}
 .qBtn{
   margin: 5px auto 5px auto;
 }
