Fixed question layout

--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -10,7 +10,9 @@
   </div>
 <div class="row">
       <h3>Question {{currentRound + 1}}</h3>
-      <p [innerHTML]="currentQuestion"></p>
+</div>
+<div class="row">
+        <p [innerHTML]="currentQuestion"></p>
 </div>
 <div class="row">
 
