--- a/quiz/src/app/intro/intro.component.css
+++ b/quiz/src/app/intro/intro.component.css
@@ -11,3 +11,12 @@
   margin: 0 auto;
   margin-top: 100px
 }
+
+.btn-orange{
+  background-color: #DE652E;
+  color: white;
+}
+.btn-purple{
+  background-color: #8A1D95;
+  color: white;
+}
