--- a/quiz/src/app/intro/intro.component.html
+++ b/quiz/src/app/intro/intro.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron col-lg-6">
   <p class="lead">
-    <a class="btn btn-success btn-lg" routerLink="/quizsetup/1" role="button">One player</a>
-    <a class="btn btn-warning btn-lg" routerLink="/quizsetup/2" role="button">Multiplayer</a>
+    <a class="btn btn-orange btn-lg" routerLink="/quizsetup/1" role="button">One player</a>
+    <a class="btn btn-purple btn-lg" routerLink="/quizsetup/2" role="button">Multiplayer</a>
   </p>
 </div>
