--- a/quiz/src/app/intro/intro.component.css
+++ b/quiz/src/app/intro/intro.component.css
@@ -16,7 +16,14 @@
   background-color: #DE652E;
   color: white;
 }
+.btn-orange:hover{
+  background-color: #DE792E;
+}
+
 .btn-purple{
   background-color: #8A1D95;
   color: white;
+}
+.btn-purple:hover{
+  background-color: #A803C5;
 }
