--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,11 +1,17 @@
 <div class="jumbotron jumbotron-fluid col-lg-6">
 <div class="container-fluid test">
+  <h3>Why?</h3>
   <p class="lead">
-    This is a quiz game made as a school project at Malmö University.
+    This is a quiz game made as a school project in the Information Architecture program at Malmö Universitet. 
+    This project was made for the course Webbapplikationer in 2nd year.
+  </p>
+  <h3>How?</h3>
+  <p class="lead">
+    You can choose to either play solo or multiplayer, choose among 5 different categories and challange yourself
+    with different difficulty levels.
   </p>
   <p class="lead">
-    You can choose to either play solo, or multiplayer. Choose among 5 different categories and challange yourself
-    with different difficulty.
+    The team behind it is:
   </p>
   <div id="CenterPic">
   <img src="/assets/elephant.png" alt="Alexander" class="avatar">
