--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <div *ngIf="showP1P2">
-        {{ currentPlayer }}
+        <h3>Now it is: <b>{{ currentPlayer }}</b>'s turn</h3>
       </div>
     </div>
     <div class="row">
