--- a/quiz/src/app/score-board/score-board.component.html
+++ b/quiz/src/app/score-board/score-board.component.html
@@ -1,9 +1,9 @@
 <div class="container jumbotron col-lg-6">
 
   <div class="row col-lg-8 offset-lg-2">
-    <table class="table">
+    <table class="table table-hover">
     <thead>
-      <h3>Scoreboard:</h3>
+      <h2>Scoreboard:</h2>
       <tr>
         <th scope="col">Name</th>
         <th scope="col">Score</th>
@@ -34,8 +34,8 @@
 
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-blue" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-red" (click)="deleteScore = true; clearScoreboard(deleteScore)" data-dismiss="modal">Clear</button>
+       <button type="button" class="btn btn-blue" data-dismiss="modal">Cancel</button>      
       </div>
     </div>
   </div>
