--- a/quiz/src/app/quiz/quiz.component.css
+++ b/quiz/src/app/quiz/quiz.component.css
@@ -7,11 +7,9 @@
 }
 h3 {
     color: white;
-    text-align: center;
 }
 h2{
-  color: yellow;
-  text-align: center;
+  color: white;
 }
 p{
   color: white;
