--- a/quiz/src/app/quiz/quiz.component.html
+++ b/quiz/src/app/quiz/quiz.component.html
@@ -15,6 +15,8 @@
     <div class="row">
       <button (click)="buttonAnswer = 'True'; clickTrueFalse(buttonAnswer)" class="raised btn-lg btn-success col-xs-5 offset-xs1">True</button>
       <button (click)="buttonAnswer = 'False'; clickTrueFalse(buttonAnswer)" class="raised btn-lg btn-danger col-xs-5 offset-xs1">False</button>
+      <audio id="correctSound" src=""></audio>
+      <audio id="wrongSound" src=""></audio>
     </div>
   </div>
 </div>
