--- a/quiz/src/app/quiz/quiz.component.css
+++ b/quiz/src/app/quiz/quiz.component.css
@@ -7,9 +7,11 @@
 }
 h3 {
     color: white;
+    text-align: center;
 }
 h2{
-  color: white;
+  color: yellow;
+  text-align: center;
 }
 p{
   color: white;
@@ -138,4 +140,12 @@ button{
 
 .wrongAnswer{
   background-color: rgb(219, 69, 83);
+}
+
+.card{
+    width: 40%;
+}
+.center-btn{
+    width: 30%;
+    margin: 20px;
 }
