--- a/quiz/src/app/quiz-setup/quiz-setup.component.html
+++ b/quiz/src/app/quiz-setup/quiz-setup.component.html
@@ -3,7 +3,7 @@
 <div *ngIf="showCategory" class="jumbotron col-lg-6 animated fadeIn">
 
 <!-- SKRIV KATEGORI HTML HÄR -->
-<h3>Välj kategori: </h3>
+<h3>Choose category: </h3>
 <button (click)="category='9'; setCategory(category)" class="btn btn-blue btn-lg btn-block">General</button>
 <button (click)="category='21'; setCategory(category)" class="btn btn-orange btn-lg btn-block">Sports</button>
 <button (click)="category='23'; setCategory(category)" class="btn btn-purple btn-lg btn-block">History</button>
@@ -17,7 +17,7 @@
 <div *ngIf="showDifficulty" class="jumbotron col-lg-6 animated fadeIn">
 
 <!-- SKRIV SVÅRIGHETSGRAD HTML HÄR -->
-<h3>Välj svårighetsgrad:</h3>
+<h3>Choose difficulty:</h3>
 <button *ngIf="showHardButton" (click)="difficulty='hard'; setDifficulty(difficulty)" class="btn btn-danger btn-lg btn-block">Difficult</button>
 <button (click)="difficulty='medium'; setDifficulty(difficulty)" class="btn btn-warning btn-lg btn-block round">Medium</button>
 <button (click)="difficulty='easy'; setDifficulty(difficulty)" class="btn btn-success btn-lg btn-block round">Easy</button>
