--- a/quiz/src/app/about/about.component.html
+++ b/quiz/src/app/about/about.component.html
@@ -1,8 +1,7 @@
-<div class="jumbotron jumbotron-fluid col-lg-6">
-<div class="container-fluid test">
+<div class="jumbotron  animated fadeIn">
   <h3>Why?</h3>
   <p class="lead">
-    This is a quiz game made as a school project in the Information Architecture program at Malmö Universitet. 
+    This is a quiz game made as a school project in the Information Architecture program at Malmö Universitet.
     This project was made for the course Webbapplikationer in 2nd year.
   </p>
   <h3>How?</h3>
@@ -13,10 +12,11 @@
   <p class="lead">
     The team behind it is:
   </p>
-  <div id="CenterPic">
-  <img src="/assets/elephant.png" alt="Alexander" class="avatar">
-  <img src="/assets/panda.png" alt="Hareer" class="avatar">
-  <img src="/assets/redPandaa.png" alt="My" class="avatar">
-  <img src="/assets/uggla.png" alt="Viktor" class="avatar">
+
+  <div class="row iconRow">
+  <img src="/assets/elephant.png" alt="Alexander" class="col col-sm-6 col-md-3">
+  <img src="/assets/panda.png" alt="Hareer"       class="col col-sm-6 col-md-3">
+  <img src="/assets/redPandaa.png" alt="My"       class="col col-sm-6 col-md-3">
+  <img src="/assets/uggla.png" alt="Viktor"       class="col col-sm-6 col-md-3">
   </div>
 </div>
